# run-groups

./: .gitignore  README.md  cargo.toml  justfile  package.json  pnpm-lock.yaml  tailwind.config.js
sheet/: Cargo.toml
sheet/src/: lib.rs  model.rs
src/: lib.rs  main.rs  model.rs  sheet.rs  styles.css
web/: Cargo.toml  tailwind.config.js
web/data/: meetups.csv
web/src/: app.rs  main.rs
