[package]
name = "sheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
google-sheets4 = "5.0.2"
hyper = "0.14.26"
hyper-rustls = "0.24.0"
reqwest = { version = "0.11.17", features = ["json"] }
tokio = "1.28.0"
yup-oauth2 = "8.3.0"
