[package]
name = "sheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
dotenv = "0.15.0"
google-sheets4 = "5.0.2"
hyper = "0.14.26"
hyper-rustls = "0.24.0"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = "1.28.0"
